# autonomous_needle_insertion

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  README_rosbag.sh  docker-bake.hcl  docker-compose.yml  exp_note.md  gen-dotenv.sh  read_stray_markers.py  straight_line_planner.py
.run/: simple_move.run.xml
auto_needle_insertion/: package.xml  setup.cfg  setup.py
auto_needle_insertion/auto_needle_insertion/: ee_moveit.py  ee_moveit_square.py  find_needle_static.py  find_needle_task4.py  hand_eye_calib.py  keyboard_servo.py  place_probe.py  task2manual_record.py  task2robot_exe_points_motion.py  task2robot_exe_points_refine.py  task3manual_record.py  tool_follower.py
auto_needle_insertion/auto_needle_insertion/utils/: find_needle.py  needle.py  rosbag_recorder_service.py  us_probe.py
auto_needle_insertion/launch/: dataset.launch.py  move_robot.launch.py  servo.launch.py
calibration/: PlusDeviceSet_fCal_Wisonic_C5_1_NDIPolaris_2.0_20260111_SRIL.xml  Spec_probe_c51.json  hand_eye_20251231_075559.json  hand_eye_20260112_071955.json  polaris_camera_cali_dummy.yaml  ur5e_calibration.yaml  usb_grabber_cali_dummy.yaml
guidance_console/: README.md  app.py  environment.yml  requirements.txt  straight_line_planner.py
meta_marker/: marker_errors.csv  read_stray_markers.py  tip_offset.json  tool_pivoting.py
needle_deflection_system/: setup.py
post_processing/: _demo_export_video.py  _hdf5_to_lerobot.py  convert_rosdir_to_lerobot_auto.py  lerobot_convert_rosdir_to_lerobot_auto.py  lerobot_convert_rosdir_to_lerobot_auto.sh  lerobot_viz_check.py  lerobot_viz_check.sh  post_processing.sh  readme.md  rosbag_decode.py  rosbag_decode.sh  rosbag_decode_monitor.py  rosbag_decode_monitor.sh  rosbag_size_filtering.py  task1_to_lerobot.py  task1_to_lerobot.sh  task1_viz_lerobot_gui.py  task1_viz_lerobot_gui.sh  task4_to_lerobot.py  task4_to_lerobot.sh  task_viz.py  task_viz.sh  task_viz_lerobot_gui.sh  viz_check.sh
registration/: register_points.py
ros2_ws/: ee_step_plusz.py
rqt_task_interface/: package.xml  setup.cfg
scripts/: build.sh  find_usb_grabber.sh  launch.sh  robot_preflight.sh  stop.sh
task_scripts/: move_robot.sh  (+13 more)
workspace/src/ani_moveit_py/: package.xml  setup.cfg  setup.py
workspace/src/ani_moveit_py/ani_moveit_py/: ee_move_moveit.py  ee_moveit_square.py  tool_follower.py
workspace/src/ani_moveit_py/config/: moveit_cpp.yaml  moveit_py_ur_ompl.yaml  servo_params.yaml
workspace/src/ani_moveit_py/launch/: ee_move_moveit.launch.py  ee_moveit_square.launch.py  tool_follower.launch.py
(+119 files in other folders)
